# Agent-Design-Foundry

./: CLAUDE.MD  README.md
.claude/agents/: evaluator.md  quotepilot-bom.md  rfp-orchestrator.md
.claude/commands/: generate_design_spec.md
.strategies/: evaluation_strategy.md
.templates/: ai-agent-design-template.md
GreenLight/: GreenLight.md  README.md
GreenLight/assets/: framework_config.yaml  intake_schema.json  intake_schema_snapshot.md
KnowledgeX/: .env.example  .gitignore  KnowledgeX.md  README.md  docker-compose.yml  pyproject.toml  test_cases.md
KnowledgeX/assets/: config.yaml
KnowledgeX/assets/kb/: partner_enablement_deployment_playbook.md  partner_enablement_integration_guide.md  prior_rfp_response_2024_q4.md  prior_rfp_response_2025_q1.md  prior_rfp_response_2025_q3.md  sme_faq_internal.md  spec_sheet_dynamix_core_platform.md  spec_sheet_dynamix_edge_gateway.md
KnowledgeX/assets/questions/: sample_30q.json  sample_30q.md
KnowledgeX/knowledgex/: __init__.py  chunking.py  claude_client.py  config.py  db.py  draft.py  embeddings.py  parser.py  prompts.py  render.py  retrieval.py  routing.py  schemas.py  scoring.py
KnowledgeX/output/: escalation_ENG-001.md  rfp_ENG-001.json  rfp_ENG-001.md
KnowledgeX/scripts/: generate_kb.py  generate_questions.py  ingest_kb.py  render_response.py  run_agent.py
KnowledgeX/templates/: escalation_queue.md.jinja  rfp_response.html.jinja  rfp_response.md.jinja
KnowledgeX/tests/: test_chunking.py  test_parser.py  test_retrieval.py  test_schemas.py  test_scoring.py
QuotePilot/: QuotePilot.md  README.md
(+30 files in other folders)
