[project]
name = "knowledgex"
version = "0.1.0"
description = "RFP/RFI Response Agent PoC — hybrid retrieval + confidence-banded drafting"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "sentence-transformers>=3.0.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["knowledgex"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
